; ModuleID = '/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson01/3/zjd0112/src/extr_pl011_uart.c_pl011_uart_init.c'
source_filename = "/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson01/3/zjd0112/src/extr_pl011_uart.c_pl011_uart_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPFSEL1 = common dso_local global i32 0, align 4
@GPPUD = common dso_local global i32 0, align 4
@GPPUDCLK0 = common dso_local global i32 0, align 4
@UART_CR = common dso_local global i32 0, align 4
@UART_IBRD = common dso_local global i32 0, align 4
@UART_FBRD = common dso_local global i32 0, align 4
@UART_LCRH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pl011_uart_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @GPFSEL1, align 4
  %3 = call i32 @get32(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = and i32 %4, -28673
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* %1, align 4
  %7 = or i32 %6, 16384
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = and i32 %8, -229377
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* %1, align 4
  %11 = or i32 %10, 131072
  store i32 %11, i32* %1, align 4
  %12 = load i32, i32* @GPFSEL1, align 4
  %13 = load i32, i32* %1, align 4
  %14 = call i32 @put32(i32 %12, i32 %13)
  %15 = load i32, i32* @GPPUD, align 4
  %16 = call i32 @put32(i32 %15, i32 0)
  %17 = call i32 @delay(i32 150)
  %18 = load i32, i32* @GPPUDCLK0, align 4
  %19 = call i32 @put32(i32 %18, i32 49152)
  %20 = call i32 @delay(i32 150)
  %21 = load i32, i32* @GPPUDCLK0, align 4
  %22 = call i32 @put32(i32 %21, i32 0)
  %23 = load i32, i32* @UART_CR, align 4
  %24 = call i32 @put32(i32 %23, i32 0)
  %25 = load i32, i32* @UART_IBRD, align 4
  %26 = call i32 @put32(i32 %25, i32 26)
  %27 = load i32, i32* @UART_FBRD, align 4
  %28 = call i32 @put32(i32 %27, i32 3)
  %29 = load i32, i32* @UART_LCRH, align 4
  %30 = call i32 @put32(i32 %29, i32 112)
  %31 = load i32, i32* @UART_CR, align 4
  %32 = call i32 @put32(i32 %31, i32 769)
  ret void
}

declare dso_local i32 @get32(i32) #1

declare dso_local i32 @put32(i32, i32) #1

declare dso_local i32 @delay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
